# nyush

./: .gitignore  CMakeLists.txt  IO_redirection.c  IO_redirection.h  README.md  builtin.c  builtin.h  command_check.c  command_check.h  command_parser.c  command_parser.h  execute_command.c  execute_command.h  external_program.c  external_program.h  main.c  nyush.c  nyush.h  parser.c  parser.h  pipe_.c  pipe_.h  process_manager.c  process_manager.h  structs.c  structs.h
